@@ -1,8 +1,7 @@
-import org.gradle.api.tasks.testing.logging.TestExceptionFormat
-import org.gradle.api.tasks.testing.logging.TestLogEvent
 import org.jetbrains.exposed.gradle.setupDialectTest
 import org.jetbrains.exposed.gradle.setupTestDriverDependencies
 import org.jetbrains.exposed.gradle.Versions
+import org.jetbrains.exposed.gradle.setupTestTask
 import org.jetbrains.kotlin.gradle.dsl.KotlinJvmCompile
 
 plugins {
@@ -14,6 +13,7 @@ repositories {
 }
 
 val dialect: String by project
+val testTimezone: String? by project
 
 dependencies {
     api(project(":exposed-core"))
@@ -43,13 +43,6 @@ tasks.withType<KotlinJvmCompile> {
 //    jvmTarget = "1.8"
 //}
 
-tasks.withType(Test::class.java) {
-    jvmArgs = listOf("-XX:MaxPermSize=256m")
-    testLogging {
-        events.addAll(listOf(TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED))
-        showStandardStreams = true
-        exceptionFormat = TestExceptionFormat.FULL
-    }
-}
+tasks.setupTestTask(testTimezone)
 
 setupDialectTest(dialect)
